--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,6 @@
     <modules>
         <module>eureka-server</module>
         <module>eureka-client</module>
-        <module>consul-client</module>
-        <module>service-user-interface</module>
-        <module>service-order</module>
-        <module>service-user</module>
-        <module>zuul-server</module>
-
     </modules>
 
     <!--创建Maven项目，继承spring-boot-starter-parent-->
@@ -32,6 +26,20 @@
         <spring-cloud.version>Hoxton.SR3</spring-cloud.version>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.junit.vintage</groupId>
+                    <artifactId>junit-vintage-engine</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+    </dependencies>
+
     <!--添加SpringCloud依赖管理-->
     <dependencyManagement>
         <dependencies>
@@ -44,5 +52,15 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <build>
+        <plugins>
+           <!-- 打包插件-->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
