--- a/eureka-server/src/main/resources/application-node1.properties
+++ b/eureka-server/src/main/resources/application-node1.properties
@@ -1,8 +1,6 @@
-#服务名称
-spring.application.name=eureka-client
 #端口号
-server.port=8180
+server.port=91
+eureka.instance.hostname=node1
 #服务注册中心的配置内容，指定服务注册中心的位置
 eureka.client.service-url.defaultZone=http://node1:91/eureka/,http://node2:92/eureka/,http://node3:93/eureka/
-
 
